修改体系结构文档中表格编号的问题

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -1,12 +1,12 @@
 
 ---
 
-# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统
-# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;软件体系结构描述文档
-# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V1.0 正式版
+# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统
+# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;软件体系结构描述
+# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V1.0 正式版
 
-## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CuteGroup 
-## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017-10-22
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CuteGroup 
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017-10-22
 ---
 ### 目录
 1、引言  
@@ -224,8 +224,8 @@
 
 &nbsp;&nbsp;&nbsp;&nbsp; 5.3.2 业务逻辑层模块的接口规范  
 
-&nbsp;&nbsp;&nbsp;&nbsp; Account业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* Account业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; Account业务逻辑层模块的接口规范如表9所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表9 Account业务逻辑层模块的接口规范**  
 
 
 ### Accountbl模块的接口规范<br/>
@@ -428,8 +428,8 @@
 </tr>
 </table>
 
-&nbsp;&nbsp;&nbsp;&nbsp; List业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* List业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; List业务逻辑层模块的接口规范如表10所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表10 List业务逻辑层模块的接口规范**  
 
 <table>
 <tr>
@@ -556,8 +556,8 @@
 </tr>
 </table>
 
-&nbsp;&nbsp;&nbsp;&nbsp; Member业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* Member业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; Member业务逻辑层模块的接口规范如表11所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表11 Member业务逻辑层模块的接口规范**  
 
 
 <table>
@@ -656,8 +656,8 @@
 </tr>
 </table>
 
-&nbsp;&nbsp;&nbsp;&nbsp; Present业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* Present业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; Present业务逻辑层模块的接口规范如表12所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表12 Present业务逻辑层模块的接口规范**  
 
 <table>
 <tr>
@@ -733,24 +733,24 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>PresentDataService.insert(PresentPO po)<td></td>插入一个持久化对象</td>
+<td>PresentDataService.insert(PresentPO po)</td><td>插入一个持久化对象</td>
 </tr>
 <tr>
-<td>PresentDataService.delete(PresentPO po)<td></td>删除一个持久化对象 </td>
+<td>PresentDataService.delete(PresentPO po)</td><td>删除一个持久化对象 </td>
 </tr>
 <tr>
-<td>PresentDataService.update(PresentPO po)<td></td>更新一个持久化对象</td>
+<td>PresentDataService.update(PresentPO po)</td><td>更新一个持久化对象</td>
 </tr>
 <tr>
-<td>PresentDataService.get(StrategyType)<td></td>根据策略类型查找持久化对象 </td>
+<td>PresentDataService.get(StrategyType)</td><td>根据策略类型查找持久化对象 </td>
 </tr>
 <tr>
-<td>PresentDataService.getAll()<td></td>得到所有持久化对象</td>
+<td>PresentDataService.getAll()</td><td>得到所有持久化对象</td>
 </tr>
 </table>
 
-&nbsp;&nbsp;&nbsp;&nbsp; Sale业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* Sale业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; Sale业务逻辑层模块的接口规范如表13所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表13 Sale业务逻辑层模块的接口规范**  
 
 <table>
 <tr>
@@ -895,8 +895,8 @@
 </tr>
 </table>
 
-&nbsp;&nbsp;&nbsp;&nbsp; User业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* User业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; User业务逻辑层模块的接口规范如表14所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表14 User业务逻辑层模块的接口规范**  
 
 <table>
 <tr>
@@ -1016,8 +1016,8 @@
 <td>UserDataService.find(String id)</td><td>根据ID在数据库中查找单一持久化对象</td>
 </tr>
 
-&nbsp;&nbsp;&nbsp;&nbsp; Goods业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* Goods业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; Goods业务逻辑层模块的接口规范如表15所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表15 Goods业务逻辑层模块的接口规范**  
 
 <table>
 <tr>
@@ -1172,8 +1172,8 @@
 </tr>
 </table>
 
-&nbsp;&nbsp;&nbsp;&nbsp; Store业务逻辑层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* Store业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; Store业务逻辑层模块的接口规范如表16所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表16 Store业务逻辑层模块的接口规范**  
 
 <table>
 <tr>
@@ -1342,16 +1342,18 @@
 &nbsp;&nbsp;&nbsp;&nbsp;数据层主要给业务逻辑层提供数据访问服务，包括对持久化数据的增删改查。  
 
 &nbsp;&nbsp;&nbsp;&nbsp; 5.4.1 数据层模块的职责  
-&nbsp;&nbsp;&nbsp;&nbsp; 数据层模块的职责如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* 数据层模块的职责**  
+&nbsp;&nbsp;&nbsp;&nbsp; 数据层模块的职责如表17所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表17 数据层模块的职责**  
 |模块|职责|  
 |---|---|  
 |*DataService|持久化数据库的接口，提供集体载入，集体保存，增删改查的服务|  
 
 &nbsp;&nbsp;&nbsp;&nbsp; 5.4.2 数据层模块的接口规范  
-&nbsp;&nbsp;&nbsp;&nbsp; 数据层模块的接口规范如表*所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表* 数据层模块的接口规范**  
-
+&nbsp;&nbsp;&nbsp;&nbsp; 数据层模块的接口规范如表18所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表18 数据层模块的接口规范**  
+|模块|职责|  
+|---|---|  
+|*DataService.*|每个数据层模块的供接口与其业务逻辑层的需接口相对应|  
 
 ###### 6. 信息视角
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 6.1 数据持久化对象
