--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -1,13 +1,16 @@
 
 ---
 
-# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统
-# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;软件体系结构描述
-# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V1.0 正式版
+# <center>灯具进销存系统</center>
+# <center>软件体系结构描述</center>
+# <center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V1.0 正式版<center>
 
-## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CuteGroup 
-## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017-10-22
+## <center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CuteGroup </center> 
+
+## <center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017-10-22</center>
+
 ---
+
 ### 目录
 1、引言  
 	1.1、编织目的  
@@ -61,7 +64,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统中，选择了分层体系结构风格，将系统分为3层（展示层、业务逻辑层、数据层）能够很好地示意整个高层抽象。展示层包含GUI页面的实现，业务逻辑层包含业务逻辑处理的实现，数据层负责数据的持久化和访问。分层体系结构的逻辑视角和逻辑设计方案如图1和图2所示。  
 <img src="参照体系结构风格的包图表达逻辑视角.png" height = 500 width = 400>  
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图1 参照体系结构风格的包图表达逻辑视角**  
+<center>**图1 参照体系结构风格的包图表达逻辑视角**</center>  
 
 <img src="软件体系结构逻辑设计方案.png" height = 500 width = 400>  
 
@@ -134,23 +137,23 @@
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 4.2 运行时进程
 &nbsp;&nbsp;&nbsp;&nbsp;在灯具进销存系统中，会有多个客户端进程和一个服务器端进程，其进程图如图5所示。结合部署图，客户端进程是在客户端机器上运行，服务器端进程在服务器端机器上运行。  
 <img src="进程图.png" height = 500 width = 400>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图5 进程图**  
+<center>**图5 进程图**</center>  
 
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 4.3 物理部署
 &nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统中客户端构件是放在客户端机器上，服务器端构件是放在服务器端机器上。在客户端节点上，还要部署RMIStub构件。由于Java RMI构件属于JDK6.0的一部分，所以，在系统JDK环境已经设置好的情况下，不需要再独立部署。部署图如图6所示。  
 <img src="部署图.png" height = 500 width = 400>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图6 部署图**  
+<center>**图6 部署图**</center>  
 
 ###### 5. 接口视角
 
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 5.1 模块的职责
 &nbsp;&nbsp;&nbsp;&nbsp;客户端模块和服务器端模块视图分别如图7和图8所示。客户端各层和服务器端各层的职责分别如表2和表3所示。  
 <img src="客户端模块视图.png" height = 300 width = 300>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图7 客户端模块视图  
+<center>图7 客户端模块视图</center>  
 <img src="服务器端模块视图.png" height = 300 width = 300>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图8 服务器端模块视图  
+<center>图8 服务器端模块视图</center>  
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表2 客户端各层的职责**    
+<center>**表2 客户端各层的职责**</center>    
 
 | 层 | 职责 |  
 |---|---|  
@@ -159,7 +162,7 @@
 |业务逻辑层|对于用户界面的输入响应和业务处理逻辑|  
 |网络模块|利用Java RMI 机制查找 RMI 服务|  
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表3 服务器端各层的职责**    
+<center>**表3 服务器端各层的职责**</center>    
 
 | 层 |职责|  
 |---|---|  
@@ -168,7 +171,7 @@
 |网络模块|利用Java RMI 机制开启 RMI 服务，注册 RMI 服务  
 
 &nbsp;&nbsp;&nbsp;&nbsp;每一层只是使用下方直接接触的层。层和层之间仅仅是通过接口调用来完成的。层与层之间调用的接口如表4所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表4 层之间调用的接口**    
+<center>**表4 层之间调用的接口**</center>    
 
 |接口|服务调用方|服务提供方|  
 |---|---|---|  
@@ -178,11 +181,11 @@
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 5.2 用户界面层的分解
 &nbsp;&nbsp;&nbsp;&nbsp;根据需求，系统存在29个用户界面：界面跳转如图10所示。  
 <img src="用户界面跳转.png" height = 700 width = 600>   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图10 用户界面跳转  
+<center>图10 用户界面跳转</center>  
 
 服务器端和客户端的用户界面设计接口是一致的，只是具体的页面不一样。用户界面类如图11所示。  
 ![](用户界面类.png)  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图11 用户界面类  
+<center>图11 用户界面类</center>  
 
 &nbsp;&nbsp;&nbsp;&nbsp; 5.2.1 用户界面层模块的职责  
 &nbsp;&nbsp;&nbsp;&nbsp;如表5所示为用户界面层模块的职责。  
