--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -1,4 +1,3 @@
-
 ---
 
 # <center>灯具进销存系统</center>
@@ -13,7 +12,7 @@
 
 ### 目录
 1、引言  
-	1.1、编织目的  
+	1.1、编制目的  
 	1.2、词汇表  
 	1.3、参考资料  
 2、产品描述  
