--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -59,13 +59,16 @@
 &nbsp;&nbsp;&nbsp;&nbsp;参考灯具进销存系统用例文档和灯具进销存系统软件需求规格说明中对产品的概括描述。
 ###### 3.逻辑视角
 &nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统中，选择了分层体系结构风格，将系统分为3层（展示层、业务逻辑层、数据层）能够很好地示意整个高层抽象。展示层包含GUI页面的实现，业务逻辑层包含业务逻辑处理的实现，数据层负责数据的持久化和访问。分层体系结构的逻辑视角和逻辑设计方案如图1和图2所示。  
-<img src="参照体系结构风格的包图表达逻辑视角.png" height = 500 width = 400>  
+   
+**图1 参照体系结构风格的包图表达逻辑视角**   
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图1 参照体系结构风格的包图表达逻辑视角**  
+![](https://i.imgur.com/aaC1mGB.png)
+  
+  
+**图2 软件体系结构逻辑设计方案**  
 
-<img src="软件体系结构逻辑设计方案.png" height = 500 width = 400>  
+![](https://i.imgur.com/ZpdWAsY.png)
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图2 软件体系结构逻辑设计方案**  
 
 ###### 4. 组合视角<br>
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 4.1 开发包图<br>
@@ -126,29 +129,43 @@
 
 灯具进销存系统客户端开发包图如图3所示，服务器端开发包图如图4所示。  
 
-<img src="客户端开发包图.png" height = 800 width = 800>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图3 灯具进销存系统客户端开发包图**  
-<img src="服务器端开发包图.png" height = 800 width = 800>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图4 灯具进销存系统服务器端开发包图**  
+**图3 灯具进销存系统客户端开发包图**  
+  
+![](https://i.imgur.com/cLdt8oK.png)
+  
+**图4 灯具进销存系统服务器端开发包图**  
+  
+![](https://i.imgur.com/GabBxGf.png)
 
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 4.2 运行时进程
 &nbsp;&nbsp;&nbsp;&nbsp;在灯具进销存系统中，会有多个客户端进程和一个服务器端进程，其进程图如图5所示。结合部署图，客户端进程是在客户端机器上运行，服务器端进程在服务器端机器上运行。  
-<img src="进程图.png" height = 500 width = 400>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图5 进程图**  
+  
+
+**图5 进程图**  
+  
+![](https://i.imgur.com/Ot3gBrX.png)
 
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 4.3 物理部署
-&nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统中客户端构件是放在客户端机器上，服务器端构件是放在服务器端机器上。在客户端节点上，还要部署RMIStub构件。由于Java RMI构件属于JDK6.0的一部分，所以，在系统JDK环境已经设置好的情况下，不需要再独立部署。部署图如图6所示。  
-<img src="部署图.png" height = 500 width = 400>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**图6 部署图**  
+&nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统中客户端构件是放在客户端机器上，服务器端构件是放在服务器端机器上。在客户端节点上，还要部署RMIStub构件。由于Java RMI构件属于JDK6.0的一部分，所以，在系统JDK环境已经设置好的情况下，不需要再独立部署。部署图如图6所示。 
+ 
+**图6 部署图**    
+  
+![](https://i.imgur.com/I17WkIH.png)
 
 ###### 5. 接口视角
 
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 5.1 模块的职责
 &nbsp;&nbsp;&nbsp;&nbsp;客户端模块和服务器端模块视图分别如图7和图8所示。客户端各层和服务器端各层的职责分别如表2和表3所示。  
-<img src="客户端模块视图.png" height = 300 width = 300>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图7 客户端模块视图  
-<img src="服务器端模块视图.png" height = 300 width = 300>  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图8 服务器端模块视图  
+  
+**图7 客户端模块视图**   
+  
+![](https://i.imgur.com/c3rh6H2.png)  
+  
+
+**图8 服务器端模块视图**  
+  
+![](https://i.imgur.com/5aLRHSF.png)
+
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表2 客户端各层的职责**    
 
@@ -177,12 +194,19 @@
 
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 5.2 用户界面层的分解
 &nbsp;&nbsp;&nbsp;&nbsp;根据需求，系统存在29个用户界面：界面跳转如图10所示。  
-<img src="用户界面跳转.png" height = 700 width = 600>   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图10 用户界面跳转  
+  
+
+**图10 用户界面跳转**  
+  
+![](https://i.imgur.com/LmCUQCU.png)  
 
 服务器端和客户端的用户界面设计接口是一致的，只是具体的页面不一样。用户界面类如图11所示。  
-![](用户界面类.png)  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图11 用户界面类  
+   
+**图11 用户界面类**  
+  
+  
+![](https://i.imgur.com/46nojbZ.png)
+ 
 
 &nbsp;&nbsp;&nbsp;&nbsp; 5.2.1 用户界面层模块的职责  
 &nbsp;&nbsp;&nbsp;&nbsp;如表5所示为用户界面层模块的职责。  
