修改Accountbl的接口

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -287,7 +287,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.saveInitAccountInfo</td>
-<td>语法</td> <td>public void saveInitAccountInfo(InitAccountVO) </td>
+<td>语法</td> <td>public ResultMessage saveInitAccountInfo(InitAccountVO) </td>
 </tr>
 <tr>
 <td>前置条件</td> <td>已填写好期初建账的必要信息</td>
@@ -298,17 +298,17 @@
 <tr></tr>
 <tr>
 <td rowspan="3">Accountbl.addAccount</td>
-<td>语法</td> <td>public boolean addAccount(AccountVO vo);</td>
+<td>语法</td> <td>public ResultMessage initAndSave(AccountVO vo);</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>财务人员增加账户</td>
+<td>前置条件</td> <td>财务人员已填好新账户信息</td>
 </tr>
 <tr>
 <td>后置条件</td><td>持久化保存新账户信息</td>
 </tr>
 <tr>
 <td rowspan="3">Accountbl.deleteAccount</td>
-<td>语法</td> <td>public boolean deleteAccount(String name);</td>
+<td>语法</td> <td>public ResultMessage deleteAccount(String name);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>财务人员删除账户</td>
@@ -317,8 +317,8 @@
 <td>后置条件</td><td>持久化删除帐户信息</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.saveAccount</td>
-<td>语法</td> <td>public void saveAccount(String name，AccountVO vo);</td>
+<td rowspan="3">Accountbl.modifyAccount</td>
+<td>语法</td> <td>public ResultMessage modifyAccount(AccountVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>财务人员修改账户信息后保存</td>
@@ -327,18 +327,18 @@
 <td>后置条件</td><td>持久化保存账户信息</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.searchAccount</td>
-<td>语法</td> <td>public List<AccountVO> searchAccount(String keyword);</td>
+<td rowspan="3">Accountbl.findAccount</td>
+<td>语法</td> <td>public List<AccountVO> findAccount();</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>财务人员输入关键字进行模糊查找账户</td>
+<td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回符合条件的账户列表</td>
+<td>后置条件</td><td>返回所有账户的列表</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.createList</td>
-<td>语法</td> <td>public ListInitVO createList(ListType type);</td>
+<td rowspan="3">Accountbl.newList</td>
+<td>语法</td> <td>public String newList(ListType type)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -347,28 +347,28 @@
 <td>后置条件</td><td>返回单据编号和操作员</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openDraftList</td>
-<td>语法</td> <td>public Map<ListType,String> openDraftList();</td>
+<td rowspan="3">Accountbl.openDraft</td>
+<td>语法</td> <td>public List<ListVO> openDraft(ListType type)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>打开草稿单列表</td>
+<td>后置条件</td><td>返回草稿单列表</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openList</td>
-<td>语法</td> <td>public Map<ListType,String> openList(ListType type, String id);</td>
+<td rowspan="3">Accountbl.openCommited</td>
+<td>语法</td> <td>public List<ListVO> openComitted(ListType type)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>打开一张草稿单</td>
+<td>后置条件</td><td>返回提交过的单据列表</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.saveList</td>
-<td>语法</td> <td>public void saveList(ListType type, PaymentListVO);</td>
+<td rowspan="3">Accountbl.save</td>
+<td>语法</td> <td>public ResultMessage save(ListType type , ListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个收款／付款／现金费用回合</td>
@@ -377,38 +377,38 @@
 <td>后置条件</td><td>持久化保存单据数据</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.searchMember</td>
-<td>语法</td> <td>public Map<String,String> searchMember(int id, String name)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>输入会员id和姓名进行模糊查找</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回所有符合条件的会员列表</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.getMember</td>
-<td>语法</td> <td>public MemberVO getMember(int id)</td>
+<td rowspan="3">Accountbl.delete</td>
+<td>语法</td> <td>public ResultMessage delete (ListType type, String id)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回要查询的会员信息</td>
+<td>后置条件</td><td>持久化删除单据数据</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.getAccount</td>
-<td>语法</td> <td>public AccountVO getAccount(String AccountName);</td>
+<td rowspan="3">Accountbl.findMember</td>
+<td>语法</td> <td>public List<memberVO> findMember(String info ,String type)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>输入会员关键字及关键字类型进行模糊查找</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有符合条件的会员列表</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.findAccount</td>
+<td>语法</td> <td>public List<accountVO> findAccount()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个收款／付款／现金费用回合</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回银行账户信息</td>
+<td>后置条件</td><td>返回银行账户列表</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.commitList</td>
-<td>语法</td> <td>public void commitList(ListType type, PaymentListVO);</td>
+<td rowspan="3">Accountbl.commit</td>
+<td>语法</td> <td>public ResultMessage commit(ListType type , ListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>已填写好收款／付款／现金费用单信息</td>
