--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -267,23 +267,23 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.getGoodsInfo</td>
-<td>语法</td> <td>public GoodsVO getGoodsInfo(String id) </td>
+<td>语法</td> <td>public List<GoodsVO> getGoodsInfo() </td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td> <td>返回上一财政年该商品信息</td>
+<td>后置条件</td> <td>返回上一财政年所有商品信息</td>
 </tr>
 <tr>
 <td rowspan="3">Accountbl.getMemberInfo</td>
-<td>语法</td> <td>public MemberVO getMemberInfo(String id) </td>
+<td>语法</td> <td>public List<MemberVO> getMemberInfo() </td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td> <td>返回上一财政年该客户信息</td>
+<td>后置条件</td> <td>返回上一财政年所有客户信息</td>
 </tr>
 <tr>
 <td rowspan="3">Accountbl.saveInitAccountInfo</td>
@@ -426,16 +426,10 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>Goods.searchGoods(String id, String name)</td> <td>获取商品列表</td>
+<td>Goods.getAllGoods()</td> <td>获取所有商品的信息</td>
 </tr>
 <tr>
-<td>Goods.getGoods(String id)</td> <td>获取指定商品的信息</td>
-</tr>
-<tr>
-<td>Member.searchMember(String id, String name)</td> <td>获取客户列表</td>
-</tr>
-<tr>
-<td>Member.getMember(String id)</td> <td>获取指定客户的信息</td>
+<td>Member.getAllMember()</td> <td>获取所有客户的信息</td>
 </tr>
 <tr>
 <td>AccountDataService.getBankAccountInform(String name)</td> <td>获取银行账户信息</td>
@@ -936,7 +930,7 @@
 </tr>
 <tr>
 <td rowspan = "3">User.login</td>
-<td>语法</td><td>public boolean login(String id,String password)</td>
+<td>语法</td><td>public ResultMessage login(String id,String password)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>Password符合输入规则</td>
@@ -945,38 +939,68 @@
 <td>后置条件</td><td>查找是否存在相应的User,根据输入的password返回登录验证的结果</td>
 </tr>
 <tr>
-<td rowspan = "3">User.create</td>
-<td>语法</td><td>public boolean create(UserVO)</td>
+<td rowspan = "3">User.changePassword</td>
+<td>语法</td><td>public ResultMessage changePassword(String old,String new)</td>
+</tr>
+<tr>
+<td>前置条件</td><td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>若旧密码输入正确，则更新为新密码</td>
+</tr>
+<tr>
+<td rowspan = "3">User.sendMessage</td>
+<td>语法</td><td> public ResultMessage sendMessage(String message, UserRole role)</td>
+</tr>
+<tr>
+<td>前置条件</td><td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>给指定角色的用户发送消息</td>
+</tr>
+<tr>
+<td rowspan = "3">User.checkMessage</td>
+<td>语法</td><td> public List<MessageVO> checkMessage(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td><td>用户已登录</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回该用户的所有消息</td>
+</tr>
+<tr>
+<td rowspan = "3">User.new</td>
+<td>语法</td><td>public String newUser(String name)</td>
+</tr>
+<tr>
+<td>前置条件</td><td>已输入新用户名称</td>
+</tr>
+<tr>
+<td>后置条件</td><td>查找是否存在相同的User,若不存在，则返回新用户编号</td>
+</tr>
+<tr>
+<td rowspan = "3">User.initAndSave</td>
+<td>语法</td><td>public ResultMessage initAndSave(UserVO)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>password,level符合输入规则</td>
 </tr>
 <tr>
-<td>后置条件</td><td>查找是否存在相同的User,若不存在，则创建相应的新User</td>
+<td>后置条件</td><td>持久化保存新用户信息</td>
 </tr>
 <tr>
-<td rowspan = "3">User.searchUser</td>
-<td>语法</td><td>public Map<String, String> searchUser(String id, String name)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回符合条件的用户列</td>
-</tr>
-<tr>
-<td rowspan = "3">User.getUser</td>
-<td>语法</td><td>public List<UserVO> searchUser(String id)</td>
+<td rowspan = "3">User.findUser</td>
+<td>语法</td><td>public List<UserVO> findUser(String info,String type)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回特定用户的信</td>
+<td>后置条件</td><td>返回符合条件的用户列表</td>
 </tr>
 <tr>
 <td rowspan = "3">User.modify</td>
-<td>语法</td><td>public void modify(UserVO)</td>
+<td>语法</td><td>public ResultMessage modify(UserVO)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>password,level符合输入规则</td>
@@ -986,23 +1010,13 @@
 </tr>
 <tr>
 <td rowspan = "3">User.delete</td>
-<td>语法</td><td>public void delete(String id)</td>
+<td>语法</td><td>public ResultMessage delete(String id)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>无</td>
 </tr>
 <tr>
 <td>后置条件</td><td>持久化删除User</td>
-</tr>
-<tr>
-<td rowspan = "3">User.chengePasswo</td>
-<td>语法</td><td>public boolean changePassword(String old,String new)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>若旧密码输入正确，则更新为新密码</td>
 </tr>
 <tr>
 <td rowspan = "3">User.viewLog</td>
@@ -1016,13 +1030,14 @@
 </tr>
 <tr>
 <td rowspan = "3">User.saveOpertion</td>
-<td>语法</td><td> public void saveOperation(OperationVO)</td>
+<td>语法</td><td> public ResultMessage saveOperation(OperationVO)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>完成一个完整操作</td>
 </tr>
 <tr>
 <td>后置条件</td><td>持久化保存操作记录</td>
+</tr>
 </table>
 
 <table>
