将Account接口中type拆开，体系结构文档中所有Member改成VIP

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -337,61 +337,181 @@
 <td>后置条件</td><td>返回所有账户的列表</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.newList</td>
-<td>语法</td> <td>public String newList(ListType type)</td>
+<td rowspan="3">Accountbl.newPaymentList</td>
+<td>语法</td> <td>public String newPaymentList()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回单据编号和操作员</td>
+<td>后置条件</td><td>返回新付款单的单据编号</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.newCollectionList</td>
+<td>语法</td> <td>public String newCollectionList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回新收款单的单据编号</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.newCashExpenseList</td>
+<td>语法</td> <td>public String newCashExpenseList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回新现金费用单的单据编号</td>
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openDraft</td>
-<td>语法</td> <td>public List<ListVO> openDraft(ListType type)</td>
+<td>语法</td> <td>public List<ListVO> openDraft()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回草稿单列表</td>
+<td>后置条件</td><td>返回所有草稿单列表</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.openCollectionDraft</td>
+<td>语法</td> <td>public List<ListVO> openCollectionDraft()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有收款单的草稿单列表</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.openPaymentDraft</td>
+<td>语法</td> <td>public List<ListVO> openPaymentDraft()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有付款单的草稿单列表</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.openCashExpenseDraft</td>
+<td>语法</td> <td>public List<ListVO> openCashExpenseDraft()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有现金费用单的草稿单列表</td>
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openCommited</td>
-<td>语法</td> <td>public List<ListVO> openComitted(ListType type)</td>
+<td>语法</td> <td>public List<ListVO> openComitted()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回提交过的单据列表</td>
+<td>后置条件</td><td>返回所有提交过的单据列表</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.save</td>
-<td>语法</td> <td>public ResultMessage save(ListType type , ListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>启动一个收款／付款／现金费用回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存单据数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.delete</td>
-<td>语法</td> <td>public ResultMessage delete (ListType type, String id)</td>
+<td rowspan="3">Accountbl.openPaymentCommited</td>
+<td>语法</td> <td>public List<ListVO> openPaymentComitted()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化删除单据数据</td>
+<td>后置条件</td><td>返回所有提交过的付款单列表</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.openCollectionCommited</td>
+<td>语法</td> <td>public List<ListVO> openCollectionComitted()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有提交过的收款单列表</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.openCashExpenseCommited</td>
+<td>语法</td> <td>public List<ListVO> openCashExpenseComitted()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有提交过的现金费用单列表</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.savePaymentList</td>
+<td>语法</td> <td>public ResultMessage savePaymentList(PaymentListVO)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个付款回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存付款单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.saveCollectionList</td>
+<td>语法</td> <td>public ResultMessage saveCollectionList(CollectionListVO)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个收款回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存收款单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.saveCashExpenseList</td>
+<td>语法</td> <td>public ResultMessage saveCashExpenseList(CashExpenseListVO)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个现金费用回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存现金费用单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.deletePaymentList</td>
+<td>语法</td> <td>public ResultMessage deletePaymentList(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除付款单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.deleteCollectionList</td>
+<td>语法</td> <td>public ResultMessage deleteCollectionList(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除收款单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.deleteCashExpenseList</td>
+<td>语法</td> <td>public ResultMessage deleteCashExpenseList(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除现金费用单数据</td>
 </tr>
 <tr>
 <td rowspan="3">Accountbl.findMember</td>
-<td>语法</td> <td>public List<memberVO> findMember(String info ,String type)</td>
+<td>语法</td> <td>public List<memberVO> findMember(String info)</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>输入会员关键字及关键字类型进行模糊查找</td>
+<td>前置条件</td> <td>输入会员关键字进行模糊查找</td>
 </tr>
 <tr>
 <td>后置条件</td><td>返回所有符合条件的会员列表</td>
@@ -407,14 +527,34 @@
 <td>后置条件</td><td>返回银行账户列表</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.commit</td>
-<td>语法</td> <td>public ResultMessage commit(ListType type , ListVO vo)</td>
+<td rowspan="3">Accountbl.commitPaymentList</td>
+<td>语法</td> <td>public ResultMessage commitPaymentList(PaymentListVO vo)</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>已填写好收款／付款／现金费用单信息</td>
+<td>前置条件</td> <td>已填写好付款单信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>提交单据并持久化保存单据数据</td>
+<td>后置条件</td><td>提交单据并持久化保存付款单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.commitCollectionList</td>
+<td>语法</td> <td>public ResultMessage commitCollectionList(CollectionListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>已填写好收款单信息</td>
+</tr>
+<tr>
+<td>后置条件</td><td>提交单据并持久化保存收款单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Accountbl.commitCashExpenseList</td>
+<td>语法</td> <td>public ResultMessage commitCashExpenseList(CashExpenseListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>已填写好现金费用单信息</td>
+</tr>
+<tr>
+<td>后置条件</td><td>提交单据并持久化保存现金费用单数据</td>
 </tr>
 </table>
 
@@ -432,13 +572,13 @@
 <td>Member.getAllMember()</td> <td>获取所有客户的信息</td>
 </tr>
 <tr>
-<td>AccountDataService.getBankAccountInform(String name)</td> <td>获取银行账户信息</td>
+<td>AccountDataService.getBankAccountInfor(String name)</td> <td>获取银行账户信息</td>
 </tr>
 <tr>
-<td>AccountDataService.addBankAccountInform(AccountPO po)</td> <td>持久化添加银行账户信息</td>
+<td>AccountDataService.addBankAccountInfor(AccountPO po)</td> <td>持久化添加银行账户信息</td>
 </tr>
 <tr>
-<td>AccountDataService.saveBankAccountInform(AccountPO po)</td> <td>持久化保存银行账户信息</td>
+<td>AccountDataService.saveBankAccountInfor(AccountPO po)</td> <td>持久化保存银行账户信息</td>
 </tr>
 <tr/>
 <td>AccountDataService.getCollectionList(String id)</td> <td>获取收款单</td>
@@ -447,10 +587,28 @@
 <td>AccountDataService.getPaymentList(String id)</td> <td>获取付款单</td>
 </tr>
 <tr>
-<td>AccountDataService.getCashList(String id)</td> <td>获取现金费用单</td>
+<td>AccountDataService.getCashExpenseList(String id)</td> <td>获取现金费用单</td>
 </tr>
 <tr>
-<td>AccountDataService.getDraftList()</td> <td>获取收付款单草稿单列表</td>
+<td>AccountDataService.getDraftList()</td> <td>获取所有草稿单列表</td>
+</tr>
+<tr>
+<td>AccountDataService.getCollectionDraftList()</td> <td>获取收款单草稿单列表</td>
+</tr>
+<tr>
+<td>AccountDataService.getPaymentDraftList()</td> <td>获取付款单草稿单列表</td>
+</tr>
+<tr>
+<td>AccountDataService.getCahExpenseDraftList()</td> <td>获取现金费用单草稿单列表</td>
+</tr>
+<tr>
+<td>AccountDataService.InsertCollectionList()</td> <td>持久化添加收款单</td>
+</tr>
+<tr>
+<td>AccountDataService.InsertPaymentList()</td> <td>持久化添加付款单</td>
+</tr>
+<tr>
+<td>AccountDataService.InsertCashExpenseList()</td> <td>持久化添加现金费用单</td>
 </tr>
 </table>
 
