按照文档修改了accountblservice相关内容

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -189,8 +189,8 @@
 
 |接口|服务调用方|服务提供方|  
 |---|---|---|  
-|MemberblService<br/>PresentblService<br/>ListblService<br/>SaleblService<br/>StoreblService<br/>GoodsblService<br/>AccountblService<br/>UserblService|客户端展示层|客户端业务逻辑层  
-|MemberDataService<br/>PresentDataService<br/>ListDataService<br/>SaleDataService<br/>StoreDataService<br/>GoodsDataService<br/>AccountDataService<br/>UserDataService|客户端业务逻辑层|服务器端数据层  
+|VIPblService<br/>PresentblService<br/>ListblService<br/>SaleblService<br/>StoreblService<br/>GoodsblService<br/>AccountblService<br/>UserblService|客户端展示层|客户端业务逻辑层  
+|VIPDataService<br/>PresentDataService<br/>ListDataService<br/>SaleDataService<br/>StoreDataService<br/>GoodsDataService<br/>AccountDataService<br/>UserDataService|客户端业务逻辑层|服务器端数据层  
 
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 5.2 用户界面层的分解
 &nbsp;&nbsp;&nbsp;&nbsp;根据需求，系统存在29个用户界面：界面跳转如图10所示。  
@@ -276,8 +276,8 @@
 <td>后置条件</td> <td>返回上一财政年所有商品信息</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.getMemberInfo</td>
-<td>语法</td> <td>public List<MemberVO> getMemberInfo() </td>
+<td rowspan="3">Accountbl.getVIPInfo</td>
+<td>语法</td> <td>public List<VIPVO> getVIPInfo() </td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -298,7 +298,7 @@
 <tr></tr>
 <tr>
 <td rowspan="3">Accountbl.addAccount</td>
-<td>语法</td> <td>public ResultMessage initAndSave(AccountVO vo);</td>
+<td>语法</td> <td>public ResultMessage initAndSaveAccount(AccountVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>财务人员已填好新账户信息</td>
@@ -368,7 +368,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openDraft</td>
-<td>语法</td> <td>public List<ListVO> openDraft()</td>
+<td>语法</td> <td>public List<FinanceListVO> openDraft()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -378,7 +378,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openCollectionDraft</td>
-<td>语法</td> <td>public List<ListVO> openCollectionDraft()</td>
+<td>语法</td> <td>public List<CollectionListVO> openCollectionDraft()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -388,7 +388,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openPaymentDraft</td>
-<td>语法</td> <td>public List<ListVO> openPaymentDraft()</td>
+<td>语法</td> <td>public List<PaymentListVO> openPaymentDraft()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -398,7 +398,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openCashExpenseDraft</td>
-<td>语法</td> <td>public List<ListVO> openCashExpenseDraft()</td>
+<td>语法</td> <td>public List<CashExpenseListVO> openCashExpenseDraft()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -408,7 +408,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openCommited</td>
-<td>语法</td> <td>public List<ListVO> openComitted()</td>
+<td>语法</td> <td>public List<FinanceListVO> openComitted()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -418,7 +418,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openPaymentCommited</td>
-<td>语法</td> <td>public List<ListVO> openPaymentComitted()</td>
+<td>语法</td> <td>public List<PaymentListVO> openPaymentComitted()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -428,7 +428,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openCollectionCommited</td>
-<td>语法</td> <td>public List<ListVO> openCollectionComitted()</td>
+<td>语法</td> <td>public List<CollectionListVO> openCollectionComitted()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -438,7 +438,7 @@
 </tr>
 <tr>
 <td rowspan="3">Accountbl.openCashExpenseCommited</td>
-<td>语法</td> <td>public List<ListVO> openCashExpenseComitted()</td>
+<td>语法</td> <td>public List<CashExpenseListVO> openCashExpenseComitted()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -507,8 +507,8 @@
 <td>后置条件</td><td>持久化删除现金费用单数据</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.findMember</td>
-<td>语法</td> <td>public List<memberVO> findMember(String info)</td>
+<td rowspan="3">Accountbl.findVIP</td>
+<td>语法</td> <td>public List<VIPVO> findVIP(String info)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>输入会员关键字进行模糊查找</td>
@@ -569,7 +569,7 @@
 <td>Goods.getAllGoods()</td> <td>获取所有商品的信息</td>
 </tr>
 <tr>
-<td>Member.getAllMember()</td> <td>获取所有客户的信息</td>
+<td>VIP.getAllVIP()</td> <td>获取所有客户的信息</td>
 </tr>
 <tr>
 <td>AccountDataService.getBankAccountInfor(String name)</td> <td>获取银行账户信息</td>
@@ -740,8 +740,8 @@
 </tr>
 </table>
 
-&nbsp;&nbsp;&nbsp;&nbsp; Member业务逻辑层模块的接口规范如表11所示。  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表11 Member业务逻辑层模块的接口规范**  
+&nbsp;&nbsp;&nbsp;&nbsp; VIP业务逻辑层模块的接口规范如表11所示。  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表11 VIP业务逻辑层模块的接口规范**  
 
 
 <table>
@@ -749,8 +749,8 @@
 <td colspan ="3">提供的服务（供接口）</td>
 </tr>
 <tr>
-<td rowspan="3">Member.newMember</td>
-<td>语法</td> <td>public String newMember()</td>
+<td rowspan="3">VIP.newVIP</td>
+<td>语法</td> <td>public String newVIP()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -759,8 +759,8 @@
 <td>后置条件</td><td>返回新会员的编号</td>
 </tr>
 <tr>
-<td rowspan="3">Member.addMember</td>
-<td>语法</td> <td>public void addMember(MemberVO vo)</td>
+<td rowspan="3">VIP.addVIP</td>
+<td>语法</td> <td>public void addVIP(VIPVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>已填好新会员的必要信息，并且输入都合法</td>
@@ -769,8 +769,8 @@
 <td>后置条件</td><td>持久化保存新会员信息</td>
 </tr>
 <tr>
-<td rowspan="3">Member.deleteMember</td>
-<td>语法</td> <td>public boolean deleteMember(String id)</td>
+<td rowspan="3">VIP.deleteVIP</td>
+<td>语法</td> <td>public boolean deleteVIP(String id)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -779,8 +779,8 @@
 <td>后置条件</td><td>持久化删除会员信息，并返回是否删除成功</td>
 </tr>
 <tr>
-<td rowspan="3">Member.saveMember</td>
-<td>语法</td> <td>public void saveMember(MemberVO vo)</td>
+<td rowspan="3">VIP.saveVIP</td>
+<td>语法</td> <td>public void saveVIP(VIPVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>修改的会员信息都合法</td>
@@ -789,8 +789,8 @@
 <td>后置条件</td><td>持久化更新会员信息</td>
 </tr>
 <tr>
-<td rowspan="3">Member.searchMember</td>
-<td>语法</td> <td>public Map<String,String> searchMember(String id, String name)</td>
+<td rowspan="3">VIP.searchVIP</td>
+<td>语法</td> <td>public Map<String,String> searchVIP(String id, String name)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -799,8 +799,8 @@
 <td>后置条件</td><td>返回所有符合输入条件的会员的列表(每项为会员编号和名称)</td>
 </tr>
 <tr>
-<td rowspan="3">Member.getMember</td>
-<td>语法</td> <td>public MemberVO getMember(String id)</td>
+<td rowspan="3">VIP.getVIP</td>
+<td>语法</td> <td>public VIPVO getVIP(String id)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -818,25 +818,25 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>MemberDataService.getNewID() </td> <td>返回新会员的编号</td>
+<td>VIPDataService.getNewID() </td> <td>返回新会员的编号</td>
 </tr>
 <tr>
-<td>MemberDataService.insert(MemberPO po)</td> <td>插入一个持久化对象 </td>
+<td>VIPDataService.insert(VIPPO po)</td> <td>插入一个持久化对象 </td>
 </tr>
 <tr>
-<td> MemberDataService.delete(MemberPO po)</td> <td>删除一个持久化对象</td>
+<td> VIPDataService.delete(VIPPO po)</td> <td>删除一个持久化对象</td>
 </tr>
 <tr>
-<td>MemberDataService.update(MemberPO po)</td> <td>更新一个持久化对象 </td>
+<td>VIPDataService.update(VIPPO po)</td> <td>更新一个持久化对象 </td>
 </tr>
 <tr>
-<td> MemberDataService.find(String id)</td> <td>根据id模糊查找持久化对象 </td>
+<td> VIPDataService.find(String id)</td> <td>根据id模糊查找持久化对象 </td>
 </tr>
 <tr>
-<td> MemberDataService.find(String name)</td> <td>根据名称模糊查找持久化对象</td>
+<td> VIPDataService.find(String name)</td> <td>根据名称模糊查找持久化对象</td>
 </tr>
 <tr>
-<td>MemberDataService.get(String id)</td> <td>根据id得到持久化对象 </td>
+<td>VIPDataService.get(String id)</td> <td>根据id得到持久化对象 </td>
 </tr>
 </table>
 
@@ -991,8 +991,8 @@
 <td>后置条件</td><td>提交单据并持久化保存单据数据</td>
 </tr>
 <tr>
-<td rowspan="3">Sale.searchMember</td>
-<td>语法</td> <td>public Map<String,String> searchMember(int id, String name) </td>
+<td rowspan="3">Sale.searchVIP</td>
+<td>语法</td> <td>public Map<String,String> searchVIP(int id, String name) </td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -1001,8 +1001,8 @@
 <td>后置条件</td><td>返回所有符合输入条件的会员的列表(每项为会员编号和名称)</td>
 </tr>
 <tr>
-<td rowspan="3">Sale.getMember </td>
-<td>语法</td> <td>public Map<String,String> searchMember(int id, String name)</td>
+<td rowspan="3">Sale.getVIP </td>
+<td>语法</td> <td>public Map<String,String> searchVIP(int id, String name)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -1564,8 +1564,8 @@
 
 ###### 6. 信息视角
 ###### &nbsp;&nbsp;&nbsp;&nbsp; 6.1 数据持久化对象
-Member包：  
-- MemberPO:编号、分类、级别、姓名、电话、地址、邮编、电子邮箱、应收额度、应收、应付、默认业务员  
+VIP包：  
+- VIPPO:编号、分类、级别、姓名、电话、地址、邮编、电子邮箱、应收额度、应收、应付、默认业务员  
 Present包：
 - Present1PO:策略编号，会员级别，总额，赠品列表（包括赠品编号，名称，数量），折让价格，赠送代金劵金额,开始时间，结束时间  
 - Present2PO:策略编号，商品列表（包括每个商品的编号，名称，数量），降价金额，开始时间，结束时间  
