增加messageVO作为系统中消息传递的值对象，修改userblservice的接口

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -1088,7 +1088,7 @@
 </tr>
 <tr>
 <td rowspan = "3">User.login</td>
-<td>语法</td><td>public ResultMessage login(String id,String password)</td>
+<td>语法</td><td>public ResultMessage login(String name,String password)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>Password符合输入规则</td>
@@ -1107,8 +1107,8 @@
 <td>后置条件</td><td>若旧密码输入正确，则更新为新密码</td>
 </tr>
 <tr>
-<td rowspan = "3">User.sendMessage</td>
-<td>语法</td><td> public ResultMessage sendMessage(String message, UserRole role)</td>
+<td rowspan = "3">User.sendMessage</td>			//层内接口
+<td>语法</td><td> public ResultMessage sendMessage(MessageVO vo, UserRole role)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>无</td>
@@ -1148,7 +1148,7 @@
 </tr>
 <tr>
 <td rowspan = "3">User.findUser</td>
-<td>语法</td><td>public List<UserVO> findUser(String info,String type)</td>
+<td>语法</td><td>public List<UserVO> findUser(String info)</td>
 </tr>
 <tr>
 <td>前置条件</td><td>无</td>
@@ -1596,6 +1596,7 @@ List包：
 - ListPO:各种单据的编号列表  
 User包：  
 - UserPO：编号，名称，密码，角色，是否有最高权限  
+- MessagePO：题目，内容，时间  
 - OperationPO：操作编号，操作时间，操作员，操作类型，操作内容。  
 
 
